<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_screen"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin10"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_app_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corner_background"
                android:gravity="center"
                android:padding="@dimen/margin15"
                android:text="@string/welcome_to_kotlin_programming"
                android:textColor="@color/color_white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/tv_login_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin15"
                android:background="@drawable/round_corner_background"
                android:gravity="end"
                android:padding="@dimen/margin15"
                android:text="@string/login_activity"
                android:textColor="@color/color_white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_app_intro" />
            <TextView
                android:id="@+id/tv_signup_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin15"
                android:background="@drawable/round_corner_background"
                android:padding="@dimen/margin15"
                android:text="@string/signup_activity"
                android:textColor="@color/color_white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_login_activity" />
            <TextView
                android:id="@+id/tv_intro_screen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin15"
                android:background="@drawable/round_corner_background"
                android:padding="@dimen/margin15"
                android:gravity="end"
                android:text="@string/app_intro"
                android:textColor="@color/color_white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_signup_activity" />
            <TextView
                android:id="@+id/tv_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin15"
                android:background="@drawable/round_corner_background"
                android:padding="@dimen/margin15"
                android:gravity="start"
                android:text="@string/recycler_view"
                android:textColor="@color/color_white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_intro_screen" />
            <TextView
                android:id="@+id/tv_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin15"
                android:background="@drawable/round_corner_background"
                android:padding="@dimen/margin15"
                android:gravity="end"
                android:text="@string/camera"
                android:textColor="@color/color_white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_recycler_view" />
            <TextView
                android:id="@+id/tv_google_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin15"
                android:background="@drawable/round_corner_background"
                android:padding="@dimen/margin15"
                android:gravity="start"
                android:text="@string/google_map"
                android:textColor="@color/color_white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_camera" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>